@@ -1,3 +1,6 @@
+2008-05-26 Graeme Gott <graeme@gottcode.org>
+	* Remember size of scoreboard.
+
 2008-05-24 Graeme Gott <graeme@gottcode.org>
 	* Tag version 1.0.1.
 	* FIXED: Falling pieces became jerky at higher levels.
